[package]
name = "daystrom-tui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A powerful TUI monitoring tool for multiple hosts and services"
license = "MIT"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Network utilities
tokio-native-tls = "0.3"

# Optional: DNS resolution
trust-dns-resolver = "0.23"

[dev-dependencies]
tokio-test = "0.4" 